@@ -31,6 +31,10 @@ width=40
 ##############################
 # Special options for the insert command
 [insert]
+## Calculate accurate song length
+## Choose 'no' to use a less accurate but faster calculation
+accuratelength=yes
+
 ## Choose where HARP will look for organizational data
 ## The options will be used in the order they are given.
 
