@@ -9,6 +9,8 @@ Changes in HARP-0.5.1:
 - Title queries using fitting exception now have fitted columns
 	without truncation.
 - Fixed memory leaks.
+- Fixed a bug on setting the album date.
+- Play length is now calculated on insert.
 
 Changes in HARP-0.5.0:
 - Fixed bugs in edit, admin, tree.
